# autolab

./: AbstractProxy.h  AbstractSkeleton.h  Buffer.h  CMakeLists.txt  Connection.h  Latch.h  Logging.cpp  Logging.h  MoveBase.h  Proxy.h  README.md  Receiver.h  Sender.h  Server.h  ServiceCommon.cpp  ServiceCommon.h  Skeleton.h  main.cpp
